# GNUGadu

./: .cvsignore  ANNOUNCE  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  config.h.in  configure.in  doxygen-config  gg2-devel.SlackBuild  gg2.desktop  gg2.spec  slack-desc
contrib/: Makefile.am  example.pl  gg2sms  mkgg2snap
contrib/gghist/: HOW_TO_COMPILE  Makefile.am  a6.c  gg_history.c  gg_history.h  gghist.c
contrib/mozilla-plugin/: Makefile.am  mozilla-plugin.c  mozilla-plugin.h  npunix.c
contrib/plugin_example/: build.sh  my_plugin.c  my_plugin.h
contrib/remote_client/: Makefile  main.c  remote_client.c  remote_client.h
debian/: changelog  control  copyright  files  gg2-dev.install  gg2-emoticons.install  gg2-emoticons.links  gg2.1  gg2.dirs  gg2.install  gg2.lintian-overrides  gg2.menu  gg2.postinst  gg2.postrm  gg2.sgml  gg2.substvars  gghist.1  gghist.sgml  rules
doc/: README.remote  emoticons.def  icons.howto  menu.howto  plugins.howto  problems
doc/gg2-doc/: Makefile  README  dtd.dsl
doc/gg2-doc/scripts/: html-stylesheet.sh
doc/gg2-doc/sgmld/: check_structs  find_signals  icons.sgml  introduction.sgml  main.sgml  menu.sgml  plugins.sgml  repo.sgml  signals.sgml  signals_docklet.sgml  signals_gadu-gadu.sgml  signals_icq.sgml  signals_jabber.sgml  signals_main-gui.sgml  signals_remote.sgml  signals_sms.sgml  signals_sound-arts.sgml  signals_sound-esd.sgml  signals_sound-external.sgml  signals_sound-oss.sgml  signals_tlen.sgml  signals_xosd.sgml  structs  structs.sgml
doc/gg2-doc/sgmlu/: dotconf.sgml  images  main.sgml
doc/gg2-doc/sgmlu/img/: first_start.eps  tab_or_tree.eps
lib/: Makefile.am  dialog.c  dialog.h  gg-types.h  gg2_core.h.in  gg2_core.pc.in  ggadu_conf.c  ggadu_conf.h  ggadu_dialog.c  ggadu_dialog.h  ggadu_menu.c  ggadu_menu.h  ggadu_repo.c  ggadu_repo.h  ggadu_support.c  ggadu_support.h  ggadu_types.c  ggadu_types.h  menu.c  menu.h  perl_embed.c  perl_embed.h  plugins.c  plugins.h  repo.c  repo.h  signals.c  signals.h  support.c  support.h  unified-types.c  unified-types.h
pixmaps/: Makefile.am  README.icons
pixmaps/emoticons/: Makefile.am  emoticons.def
pixmaps/icons/: Makefile.am
pixmaps/icons/bubble/: Makefile.am  README
pixmaps/icons/classic/: Makefile.am  README
pixmaps/icons/ghosts/: Makefile.am  README
pixmaps/icons/modern/: Makefile.am  README
pixmaps/icons/rozgwiazda/: Makefile.am  license.txt
pixmaps/icons/tlen-3d/: Makefile.am  README
pixmaps/icons/tlen-classic/: Makefile.am
po/: Makefile.in.in  Makevars  POTFILES.in  gg2.pot  nl.po  pl.po  pl.po.iso
sounds/: Makefile.am
src/: Makefile.am  dialog.c  dialog.h  gg-types.h  libgg2_core.pc.in  main.c  menu.c  perl_embed.c  perl_embed.h  plugins.c  plugins.h  repo.c  repo.h  signals.c  signals.h  support.c  support.h  unified-types.c  unified-types.h
src/plugins/: Makefile.am
src/plugins/GUI/: GUI_plugin.c  GUI_plugin.h  Makefile.am  gtkanimlabel.c  gtkanimlabel.h  gtkimhtml.c  gtkimhtml.h  gui_chat.c  gui_chat.h  gui_chat_session.c  gui_chat_session.h  gui_dialogs.c  gui_dialogs.h  gui_handlers.c  gui_handlers.h  gui_main.c  gui_main.h  gui_preferences.c  gui_preferences.h  gui_search.c  gui_search.h  gui_support.c  gui_support.h  gui_userview.c  gui_userview.h
src/plugins/aaway/: Makefile.am  aaway.c  aaway.h
src/plugins/dbus/: Makefile.am  README  build_test.sh  dbus_plugin.c  dbus_plugin.h  libofi.h  org.freedesktop.im.GG.service.in  test.c
src/plugins/docklet/: Makefile.am  docklet_plugin.c  docklet_plugin.h  egg-marshal.c  eggtrayicon.c  eggtrayicon.h
src/plugins/docklet/dockapp/: Makefile.am  dockapp.xpm  dockapp_plugin.c  dockapp_plugin.h
src/plugins/docklet/system-tray/: Makefile.am  docklet_plugin.c  docklet_plugin.h  eggtrayicon.c  eggtrayicon.h
src/plugins/gadu_gadu/: Makefile.am  gadu_gadu_plugin.c  gadu_gadu_plugin.h
src/plugins/gadu_gadu/libgadu/: Makefile.am  Makefile.in  autogen.sh  config.h.in  configure.in
src/plugins/gadu_gadu/libgadu/lib/: Makefile.am  Makefile.in  common.c  compat.h  dcc.c  events.c  http.c  libgadu-config.h.in  libgadu.c  libgadu.h  obsolete.c  pubdir.c  pubdir50.c
src/plugins/gadu_gadu/libgadu/m4/: openssl.m4  stdint.m4
src/plugins/history/: Makefile.am
src/plugins/icq/: Makefile.am  chatsession.c  chatsession.h  contacts.c  contacts.h  cyrillic.c  eventhandle.c  eventhandle.h  filesession.c  filesession.h  icq.h  icq_plugin.c  icq_plugin.h  icqbyteorder.c  icqbyteorder.h  icqevent.c  icqevent.h  icqlib.c  icqlib.h  icqpacket.c  icqpacket.h  icqtypes.h  list.c  list.h  proxy.c  queue.c  queue.h  socketmanager.c  socketmanager.h  stdpackets.c  stdpackets.h  tcp.c  tcp.h  tcpchathandle.c  tcpfilehandle.c  tcphandle.c  tcplink.c  tcplink.h  timeout.c  timeout.h  (+5 more)
src/plugins/ignore/: Makefile.am  ignore.c  ignore.h
src/plugins/jabber/: Makefile.am  jabber_cb.c  jabber_cb.h  jabber_login.c  jabber_login.h  jabber_plugin.c  jabber_plugin.h  jabber_plugin_protocol.c  jabber_plugin_protocol.h  jabber_plugin_roster.c  jabber_plugin_roster.h  jabber_protocol.c  jabber_protocol.h
src/plugins/remote/: Makefile.am  remote_plugin.c  remote_plugin.h
src/plugins/sms/: Makefile.am  sms_core.c  sms_core.h  sms_gui.c  sms_gui.h
src/plugins/sound/: Makefile.am
src/plugins/sound/arts/: Makefile.am  plugin_sound_arts.c  sound-arts.c  sound-arts.cpp  sound-arts.h
src/plugins/sound/esd/: Makefile.am  plugin_sound_esd.c
src/plugins/sound/oss/: Makefile.am  plugin_sound_oss.c
src/plugins/tlen/: Makefile.am  tlen_plugin.c  tlen_plugin.h
src/plugins/update/: Makefile.am  update_plugin.c  update_plugin.h
src/plugins/xosd/: Makefile.am  plugin_xosd.c  plugin_xosd.h
themes/: Makefile.am  blue2.theme  darkblue.theme  default.theme  gray2.theme  green2.theme  lightblue.theme  office.theme  red2.theme  thinice.theme  tropic.theme  vblue2.theme  vgreen2.theme  vred2.theme  white2.theme
