## Process this file with automake to produce Makefile.in
SUBDIRS = intl lib src po pixmaps sounds themes contrib

EXTRA_DIST = codeset.m4 gettext.m4 glibc2.m4 glibc21.m4 iconv.m4 intdiv0.m4 intmax.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 longdouble.m4 longlong.m4 nls.m4 po.m4 printf-posix.m4 progtest.m4 signed.m4 size_max.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4 wchar_t.m4 wint_t.m4 xsize.m4 codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 intmax.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 longdouble.m4 longlong.m4 nls.m4 po.m4 printf-posix.m4 progtest.m4 signed.m4 size_max.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4 wchar_t.m4 wint_t.m4 xsize.m4 \
	autogen.sh \
	ANNOUNCE \
	AUTHORS \
	ChangeLog \
	COPYING \
	contrib/example.pl \
	contrib/gg2sms \
	contrib/mkgg2snap \
	contrib/plugin_example/build.sh \
	contrib/plugin_example/my_plugin.c \
	contrib/plugin_example/my_plugin.h \
	contrib/remote_client/Makefile \
	contrib/remote_client/main.c \
	contrib/remote_client/remote_client.c \
	contrib/remote_client/remote_client.h \
	doc/README.remote \
	doc/README.dbus \
	doc/problems \
	gg2.desktop \
	gg2.spec \
	gg2-devel.SlackBuild \
	slack-desc \
	esd.m4 \
	debian/changelog \
	debian/control \
	debian/copyright \
	debian/rules \
	debian/gg2-dev.install \
	debian/gg2-emoticons.install \
	debian/gg2-emoticons.links \
	debian/gg2.dirs \
	debian/gg2.docs \
	debian/gg2.install \
	debian/gg2.lintian-overrides \
	debian/gg2.menu \
	debian/gg2.postinst \
	debian/gg2.postrm \
	debian/gg2.sgml \
	debian/gghist.sgml \
	debian/compat

LIBTOOL_DEPS = @LIBTOOL_DEPS@
libtool: $(LIBTOOL_DEPS)
	$(SHELL) ./config.status --recheck

ACLOCAL_AMFLAGS = -I .

